# smith-c

./: .gitignore  README.md  meson.build
include/smith/: allocator.h  cursor.h  finite_allocator.h  format.h  hash_interner.h  interner.h  null_allocator.h  parser.h  string.h  system_allocator.h  tokenizer.h
src/: allocator.c  finite_allocator.c  format.c  hash_interner.c  interner.c  null_allocator.c  parser.c  system_allocator.c  tokenizer.c
tests/: meson.build
tests/include/smith/: assertions.h  random.h  test_suites.h
tests/src/: assertions.c  random.c  test_hash_interner.c  test_main.c  test_parser.c  test_tokenizer.c
